@@ -20,9 +20,11 @@ from django.db.backends.creation import BaseDatabaseCreation
 from django.conf import settings
 from django.core.management import call_command
 from django import VERSION as djangoVersion
+from django.db.backends.util import truncate_name
 
 class DatabaseCreation ( BaseDatabaseCreation ):
-
+    psudo_column_prefix = 'psudo_'
+    
     data_types = { 
         'AutoField':                    'INTEGER GENERATED BY DEFAULT AS IDENTITY (START WITH 1, INCREMENT BY 1, CACHE 10 ORDER)', # DB2 Specific
         'BooleanField':                 'SMALLINT CHECK (%(attname)s IN (0,1))',
@@ -57,6 +59,7 @@ class DatabaseCreation ( BaseDatabaseCreation ):
         """Return the CREATE INDEX SQL statements for a single model field"""
         output = []
         qn = self.connection.ops.quote_name
+        max_name_length = self.connection.ops.max_name_length
         # ignore tablespace information
         tablespace_sql = ''
         i = 0
@@ -67,8 +70,10 @@ class DatabaseCreation ( BaseDatabaseCreation ):
                 for column in unique_together_index:
                     for local_field in model._meta.local_fields:
                         if column == local_field.name:
-                            column_list.extend( [local_field.column] )
-                            
+                            column_list.extend( [ local_field.column ] )
+                
+                self.__add_psudokey_column( style, self.connection.cursor(), model._meta.db_table, model._meta.pk.attname, column_list )
+                column_list.extend( [ truncate_name( "%s%s" % ( self.psudo_column_prefix, "_".join( column_list ) ), max_name_length ) ] )            
                 output.extend( [style.SQL_KEYWORD( 'CREATE UNIQUE INDEX' ) + ' ' + \
                                 style.SQL_TABLE( qn( 'db2_%s_%s' % ( model._meta.db_table, i ) ) ) + ' ' + \
                                 style.SQL_KEYWORD( 'ON' ) + ' ' + \
@@ -77,15 +82,20 @@ class DatabaseCreation ( BaseDatabaseCreation ):
                                 '%s;' % tablespace_sql] )
             model._meta.unique_together_index = []
             
-        cisql = False
         if f.unique_index:
+            column_list = []
+            column_list.extend( [f.column] )
+            self.__add_psudokey_column( style, self.connection.cursor(), model._meta.db_table, model._meta.pk.attname, column_list )
             cisql = 'CREATE UNIQUE INDEX'
+            output.extend( [style.SQL_KEYWORD( cisql ) + ' ' + 
+                        style.SQL_TABLE( qn( '%s_%s' % ( model._meta.db_table, f.column ) ) ) + ' ' + 
+                        style.SQL_KEYWORD( 'ON' ) + ' ' + 
+                        style.SQL_TABLE( qn( model._meta.db_table ) ) + ' ' + 
+                        "(%s, %s )" % ( style.SQL_FIELD( qn( f.column ) ), style.SQL_FIELD( qn( truncate_name( ( self.psudo_column_prefix + f.column ), max_name_length ) ) ) ) +  
+                        "%s;" % tablespace_sql] )
+            
         elif f.db_index and not f.unique:
             cisql = 'CREATE INDEX'
-        else:
-            return output
-            
-        if cisql: 
             output.extend( [style.SQL_KEYWORD( cisql ) + ' ' + 
                         style.SQL_TABLE( qn( '%s_%s' % ( model._meta.db_table, f.column ) ) ) + ' ' + 
                         style.SQL_KEYWORD( 'ON' ) + ' ' + 
@@ -117,6 +127,12 @@ class DatabaseCreation ( BaseDatabaseCreation ):
             self.connection.settings_dict["SUPPORTS_TRANSACTIONS"] = True
                 
         self.__clean_up( self.connection.cursor() )
+        self.connection._commit()
+        self.connection.close()
+        # Confirm the feature set of the test database
+        if( djangoVersion[0:2] > ( 1, 2 ) ):
+            self.connection.features.confirm()
+        
         if( djangoVersion[0:2] <= ( 1, 1 ) ):
             call_command( 'syncdb', verbosity = verbosity, interactive = False )
         else:
@@ -176,4 +192,22 @@ class DatabaseCreation ( BaseDatabaseCreation ):
         for table in tables:
             sql = "DROP TABLE %s" % self.connection.ops.quote_name( table )
             cursor.execute( sql )
+        cursor.close()
+        
+    # Private method to alter a table with adding psudokey column
+    def __add_psudokey_column( self, style, cursor, table_name, pk_name, column_list ):
+        qn = self.connection.ops.quote_name
+        max_name_length = self.connection.ops.max_name_length
+        
+        sql = style.SQL_KEYWORD( 'ALTER TABLE ' ) + \
+            style.SQL_TABLE( qn( table_name ) ) + \
+            style.SQL_KEYWORD( ' ADD COLUMN ' ) + \
+            style.SQL_FIELD( qn( truncate_name( "%s%s" % ( self.psudo_column_prefix, "_".join( column_list ) ), max_name_length ) ) ) + \
+            style.SQL_KEYWORD( ' GENERATED ALWAYS AS( CASE WHEN ' ) + \
+            style.SQL_FIELD( "%s %s" % ( " IS NULL OR ".join( column_list ), 'IS NULL THEN ' ) ) + \
+            style.SQL_FIELD( qn( pk_name ) ) + \
+            style.SQL_KEYWORD( ' END ) ;' )
+        cursor.execute( 'SET INTEGRITY FOR ' + style.SQL_TABLE( qn( table_name ) ) + ' OFF CASCADE DEFERRED;' )
+        cursor.execute( sql )
+        cursor.execute( 'SET INTEGRITY FOR ' + style.SQL_TABLE( table_name ) + ' IMMEDIATE CHECKED;' )
         cursor.close()
